--- a/index.css
+++ b/index.css
@@ -123,7 +123,9 @@
     max-width:100%;
 }
 .diffs-graphic {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
+    width: 80%;
+    max-width: 80%;
 }
 
 /* Modal */
