--- a/index.css
+++ b/index.css
@@ -37,6 +37,11 @@
     font-size: 25px;
 }
 
+/* Footer */
+.footer {
+    text-align: center;
+    padding: 0px 0px 20px 0px;
+}
 /* Input Forms */
 .content {
     position:relative;
@@ -77,7 +82,7 @@
 }
 .course-hcap-form {
     background-color: rgb(26, 26, 26);
-    padding: 30px;
+    padding: 10px;
     border-radius: 10px;
     display: flex;
     align-items: center;
@@ -116,7 +121,7 @@
     margin:25px 20px 0px 20px;
     /* width:50%; */
     font-family: 'Quicksand', sans-serif;
-    font-size:15px;
+    font-size:18px;
 }
 .content img {
     max-width:100%;
